--- a/gdv-alpha/pom.xml
+++ b/gdv-alpha/pom.xml
@@ -52,11 +52,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Spring Boot Starter Web for REST API -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+<!--        &lt;!&ndash; Spring Boot Starter Web for REST API &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
