--- a/gdv-alpha/configs/process-tenant-2.properties
+++ b/gdv-alpha/configs/process-tenant-2.properties
@@ -4,5 +4,5 @@ process1.configFile=process-get-file-azure.properties
 process2.classpath=marko.gdv.alpha.process.ProcessGdv2Json
 process2.configFile=process-gdv-2-json.properties
 
-process3.classpath=marko.gdv.alpha.process.ProcessORMPostgres
-process3.configFile=process-orm-postgres.properties
+process3.classpath=marko.gdv.alpha.process.ProcessORMMySQL
+process3.configFile=process-orm-mysql.properties
