--- a/gdv-alpha/configs/process-tenant-1.properties
+++ b/gdv-alpha/configs/process-tenant-1.properties
@@ -1,8 +1,11 @@
-process1.classpath=marko.gdv.alpha.process.ProcessGetFileAzure
+#common config
+time.schedule=30000
+
+process1.classpath=marko.gdv.alpha.process.impl.ProcessGetFileAzure
 process1.configFile=process-get-file-azure.properties
 
-process2.classpath=marko.gdv.alpha.process.ProcessGdv2Json
+process2.classpath=marko.gdv.alpha.process.impl.ProcessGdv2Json
 process2.configFile=process-gdv-2-json.properties
 
-process3.classpath=marko.gdv.alpha.process.ProcessORMPostgres
+process3.classpath=marko.gdv.alpha.process.impl.ProcessORMPostgres
 process3.configFile=process-orm-postgres.properties
