--- a/process-agency-2.properties
+++ b/process-agency-2.properties
@@ -1,11 +1,12 @@
-#common config
+#common configuration
 time.schedule=30000
 
+# Process configuration
 process1.classpath=marko.gdv.alpha.process.impl.ProcessGetFileAzure
 process1.configFile=process-get-file-azure.properties
 
 process2.classpath=marko.gdv.alpha.process.impl.ProcessGdv2Json
 process2.configFile=process-gdv-2-json.properties
 
-process3.classpath=marko.gdv.alpha.process.impl.ProcessORMPostgres
-process3.configFile=process-orm-postgres.properties
+process3.classpath=marko.gdv.alpha.process.impl.ProcessORMMySQL
+process3.configFile=process-orm-mysql.properties
