--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-logging.level.org.apache.camel=DEBUG
-logging.level.org.apache.camel.processor=INFO
-logging.level.org.apache.camel.route=DEBUG
-logging.level.org.apache.camel.component=ERROR
+logging.level.org.apache.camel=INFO
+logging.level.org.apache.camel.component.metrics=INFO
